[package]
name = "futures-crypto"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Future-based crypto APIs"
license = "BSD-2-Clause"
repository = "https://github.com/srijs/rust-futures-crypto"
documentation = "https://docs.rs/futures-crypto"
keywords = ["futures", "crypto", "aes", "cipher", "stream"]

[dependencies]
bytes = "0.4.5"
futures = "0.1.17"
futures-cpupool = "0.1.7"
#hex = "0.2.0"
openssl = "0.9.20"

[dev-dependencies]
itertools = "0.7.2"
quickcheck = "0.4.1"
