[package]
name = "cryptonite"
version = "0.1.3"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Utilities for futures-based asynchronous cryptography"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/srijs/rust-cryptonite"
documentation = "https://docs.rs/cryptonite"
keywords = ["futures", "crypto", "aes", "cipher", "stream"]

[dependencies]
bytes = "0.4.5"
futures = "0.1.17"
futures-cpupool = "0.1.7"
hex = "0.2.0"
openssl = "0.9.20"

[dev-dependencies]
itertools = "0.7.2"
quickcheck = "0.4.1"
